嵌入X5内核，存在部分bug“

--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VideoPlay">
+    android:orientation="vertical">
 
-    <WebView
+
+
+    <com.dalaowangsan.yyvideo.X5WebView
         android:id="@+id/view_web"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-        </LinearLayout>
-
-    </WebView>
+        android:layout_height="match_parent"
+        android:background="#fff">
     <Button
         android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:layout_marginBottom="0dp"
         android:layout_marginRight="0dp"
         android:text="播放"/>
+    </com.dalaowangsan.yyvideo.X5WebView>
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
+
